<resources>
    <string name="app_name">FastEffect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Colse navigation drawer</string>
    <string name="man">Mężczyzna</string>
    <string name="women">Kobieta</string>

    //login
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="passwordAgain">Powtórz hasło</string>
    <string name="rememberMe">Zapamiętaj mnie</string>

    <string name="desc">
        Button do przejscia na inna strone
    </string>
    <string name="descAdd">
        Przycisk dodawania nowego wlasnego produktu
    </string>
    //register
    <string name="imie">Nazwa użytkownika</string>
    <string name="email">E-mail</string>

    <string name="name">Imie</string>
    <string name="surname">Nazwisko</string>
    <string name="wieght">Waga(kg)</string>
    <string name="height">Wzrost(cm)</string>
    <string name="change">Zmień</string>
    <string name="save">Zapisz</string>
    <string name="age">Wiek</string>
    <string name="plec">Płeć</string>
    <string name="nazwa">Nazwa</string>
    <string name="yourEmail">Twój E-mail</string>

    //spinnerAktywnosc
    <string name="protein">Białko %</string>

    //spinnerRodzajSportu
    <string name="fat">Tłuszcze %</string>

    //spinnerCel
    <string name="carb">Węglowodany %</string>

    //makroskładniki i kalorie
    <string name="caloriesE">Kcal</string>
    <string name="proteinE">Białko</string>
    <string name="fatE">Tłuszcz</string>
    <string name="carbE">Węglowodany</string>
    <string name="fiberE">Błonnik</string>

    //stringi do strony glownej
    <string name="calories">0</string>
    <string name="breakfast">Śniadanie</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Obiad</string>
    <string name="valuesZero">0</string>

    //Pory dnia
    <string name="snack">Przekąska</string>
    <string name="supper">Kolacja</string>
    <string name="laktoza">Laktoza</string>
    <string name="fos">FOS</string>
    <string name="cukry">Sacharoza</string>

    //Nietolerancje
    <string name="gos">GOS</string>
    <string name="fruktoza">Fruktoza</string>
    <string name="poliole">Poliole</string>
    <string name="name_app">FastEffect</string>
    <string name="Log_in">Log in</string>
    <string name="Create_Account">Zarejestruj się</string>

    //Export data
    <string name="d_export">Zapisz lub wyślij swój dziennik żywieniowy</string>
    <string name="d_import">Import</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setMacro">Ustal rozkład makroskładników i kalorii</string>
    <string name="automatically">Automatycznie</string>
    <string name="manually">Ręcznie</string>
    <string name="kindOfSport">Rodzaj sportu: </string>
    <string name="activity">Aktywność: </string>
    <string name="whatIsPlanning">Co planuje: </string>
    <string name="addNewProduct">Dodawanie nowego produktu…</string>
    <string name="eneterValue">Podaj wartości na 100g danego produktu</string>
    <string name="enterProduct">Wprowadź produkt</string>
    <string name="findFood">Znajdź produkt bądź danie</string>
    <string name="createAnAccount">Tworzenie konta…</string>
    <string name="logOut">Wyloguj</string>
    <string name="product">Product</string>
    <string name="kalorie">Kalorie:</string>
    <string name="bia_ko_w_glowodany_b_onnik_t_uszcze">Białko: Węglowodany: Błonnik: Tłuszcze:</string>
    <string name="my_description">Zmień ilość bądź usuń produkt</string>
    <string name="description_for_alert_in_addProductActivity">Ile gram produktu chcesz wybrać?</string>
    <string name="export">export</string>
    <string name="hide_or_show_password">hide or show password</string>
    <string name="warto_kaloryczna_na_100g_produktu">Wartość kaloryczna na 100g produktu</string>
    <string name="find_product">Wyszukaj produkt</string>
    <string name="data">28.02.2020</string>
    <string name="time_of_day_add_product">Przycisk dodawania produktu do pory dnia</string>


    <string name="noActivity">Brak aktywności, praca siedząca</string>
    <string name="lowActivity">Praca siedzaca, i 1–2 treningi w tygodniu</string>
    <string name="mediumActivity">Praca siedzaca, i 3–4 treningi w tygodniu</string>
    <string name="highActivity">Praca fizyczna, i 3–4 treningi w tygodniu</string>
    <string name="veryHighActivity">Wysoka aktywność, osoby codziennie trenujące</string>

    <string name="strengthSport">Siłowy</string>
    <string name="enduranceSport">Wytrzymałościowy</string>
    <string name="mixedSport">Mieszany</string>
    <string name="noSport">Żaden</string>


    <string name="keepWeight">Utrzymanie wagi</string>
    <string name="increaseWeight">Zwiększenie wagi</string>
    <string name="reductionWeight">Zmniejszenie wagi</string>

    <string-array name="spinnerActivities">
        <item>Brak aktywności, praca siedząca</item>
        <item>Praca siedzaca, i 1–2 treningi w tygodniu</item>
        <item>Praca siedzaca, i 3–4 treningi w tygodniu</item>
        <item>Praca fizyczna, i 3–4 treningi w tygodniu</item>
        <item>Wysoka aktywność, osoby codziennie trenujące</item>
    </string-array>

    <string-array name="spinnerTypeOfActivities">
        <item>Siłowy</item>
        <item>Wytrzymałościowy</item>
        <item>Mieszany</item>
        <item>Żaden</item>
    </string-array>

    <string-array name="spinnerGoals">
        <item>Utrzymanie wagi</item>
        <item>Zwiększenie wagi</item>
        <item>Zmniejszenie wagi</item>
    </string-array>


</resources>
