<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDesription"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#cdf2ff"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/setMacro"
                android:textSize="19sp"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:id="@+id/radioButtonChooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioManually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ręczny"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/radioAutomatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Automatyczny"
                    android:textSize="17sp"
                    android:layout_marginLeft="60dp"
                    />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearLayoutAutomatyczne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/buttonAutomatycznie"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewRodzaj"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/kindOfSport"
                        android:textSize="17sp"
                        android:textColor="#000"
                        android:background="#B0DCE6"
                        android:layout_marginBottom="10dp"/>

                    <RadioGroup
                        android:id="@+id/radioGroupSport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radioStrength"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/strengthSport"/>
                        <RadioButton
                            android:id="@+id/radioMixed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mixedSport" />
                        <RadioButton
                            android:id="@+id/radioEndurance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enduranceSport"/>
                        <RadioButton
                            android:id="@+id/radioNoKindOfSport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/noSport"/>
                    </RadioGroup>
                    <Spinner
                        android:id="@+id/spinnerRodzajSportu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="5sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView

                        android:id="@+id/textViewAktywnosc"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:background="#B0DCE6"
                        android:text="@string/activity"
                        android:textSize="17sp"
                        android:layout_marginBottom="10dp"/>
                    <RadioGroup
                        android:id="@+id/radioGroupActivity"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioNoActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/noActivity"/>
                        <RadioButton
                            android:id="@+id/radioLowActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lowActivity" />
                        <RadioButton
                            android:id="@+id/radioMediumActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mediumActivity"/>
                        <RadioButton
                            android:id="@+id/radioHighActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/highActivity"/>
                        <RadioButton
                            android:id="@+id/radioVeryHighActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/veryHighActivity"/>

                    </RadioGroup>
                    <Spinner
                        android:id="@+id/spinnerAktywnosc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="5sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewCel"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:background="#B0DCE6"
                        android:text="@string/whatIsPlanning"
                        android:textSize="17sp"
                        android:layout_marginBottom="10dp"/>
                    <RadioGroup
                        android:id="@+id/radioGroupGoal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radioKeepWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/keepWeight"/>
                        <RadioButton
                            android:id="@+id/radioIncreaseWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/increaseWeight" />
                        <RadioButton
                            android:id="@+id/radioReductionWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reductionWeight"/>
                    </RadioGroup>
                    <Spinner
                        android:id="@+id/spinnerCel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="5sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRęczne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutAutomatyczne"
                tools:ignore="MissingConstraints">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutKalorie"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditTextKalorie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/caloriesE"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true"
                        android:textColor="	#808080"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutProtein"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditTextProtein"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/protein"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:textColor="	#808080"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutCarb"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditTextCarb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/carb"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:textColor="	#808080"
                        android:textSize="12sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutFat"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditTextFat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/fat"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:textColor="	#808080"
                        android:textSize="12sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_rounded_aqua"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>