<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewBack"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#41AECF"
                android:drawableStart="@drawable/ic_left"
                android:gravity="center"
                android:text="Dodawanie nowego produktu..."
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="Podaj wartości na 100g danego produktu"
                android:textColor="#000"
                android:textSize="13sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nazwa"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textColor="	#808080"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutKcal"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextKcal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/caloriesE"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="	#808080"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutProtein"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextProtein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proteinE"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="	#808080"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutCarb"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextCarb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carbE"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="	#808080"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutFat"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fatE"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="	#808080"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutFiber"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextFiber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fiberE"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="	#808080"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/buttonSave"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_rounded_aqua"
                android:text="Wprowadź produkt"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>